infrastructure/kubernetes/apps/base/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agro-apps
  labels:
    name: agro-apps
    environment: dev
